# sanedit

./: .gitignore  Cargo.toml  Makefile  README.md  Taskfile.yml  make.sh  sanedit-project.toml
buffer/: Cargo.toml
buffer/benches/: iterators.rs
buffer/src/: piece_tree.rs
buffer/src/piece_tree/: buffers.rs  builder.rs  bytes.rs  chars.rs  chunks.rs  codepoints.rs  graphemes.rs  slice.rs  tree.rs  utf8.rs
buffer/src/piece_tree/tree/: node.rs  pieces.rs
buffer/src/piece_tree/utf8/: chars.rs  graphemes.rs  graphemes2.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/: Cargo.toml
crates/buffer/: Cargo.toml
crates/buffer/benches/: edit.rs  iterators.rs  large.txt  search.rs
crates/buffer/src/: lib.rs  piece_tree.rs  search.rs
crates/buffer/src/piece_tree/: buffers.rs  bytes.rs  chunks.rs  inplace.rs  mark.rs  positions.rs  slice.rs  tree.rs  utf8.rs  view.rs  write.rs
crates/buffer/src/search/: multi.rs  searcher.rs
crates/cli/: Cargo.toml
crates/cli/src/: logging.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: change.rs  char.rs  choice.rs  chooser.rs  cursor.rs  cursors.rs  diagnostic.rs  dirs.rs  file_description.rs  filetype.rs  focus.rs  indent.rs  kill.rs  language.rs  lib.rs  locations.rs  matcher.rs  mode.rs  movement.rs  pairs.rs  range.rs  search.rs  severity.rs  text.rs  text_object.rs
crates/core/src/change/: test.rs
crates/core/src/chooser/: choices.rs
crates/core/src/matcher/: matches.rs  receiver.rs
crates/editor/: Cargo.toml
crates/editor/pegs/: markdown-discard.peg
crates/editor/src/: actions.rs  common.rs  draw.rs  editor.rs  events.rs  grammar.rs  grammars.rs  job_runner.rs  lib.rs  runtime.rs  server.rs  signals.rs  syntax.rs
crates/editor/src/actions/: completion.rs  cursors.rs  editor.rs  filetree.rs  hooks.rs  indent.rs  jobs.rs  jumps.rs  locations.rs  lsp.rs  macros.rs  mouse.rs  movement.rs  popup.rs  prompt.rs  search.rs  shell.rs  snapshots.rs  snippets.rs  syntax.rs  tests.rs  text.rs  text_objects.rs  view.rs  window.rs
crates/editor/src/common/: change.rs  char.rs  choice.rs  cursors.rs  dirs.rs  eol.rs  file.rs  git.rs  highlight.rs  indent.rs  markdown.rs  matcher.rs  movement.rs  pairs.rs  range.rs  search.rs  searcher.rs  text.rs  text_objects.rs  window.rs
crates/editor/src/draw/: completion.rs  filetree.rs  locations.rs  popup.rs  prompt.rs  search.rs  snapshots.rs  status.rs  statusline.rs  triple.rs  window.rs  window_buffers.rs
crates/editor/src/editor/: buffers.rs  caches.rs  clipboard.rs  config.rs  file_description.rs  filetree.rs  filetype.rs  hooks.rs  ignore.rs  job_broker.rs  jobs.rs  keymap.rs  language.rs  lsp.rs  macros.rs  options.rs  redraw.rs  snippets.rs  syntax.rs  themes.rs  windows.rs
crates/editor/src/grammars/: json.pest
crates/editor/src/job_runner/: context.rs  id.rs
crates/editor/src/server/: client.rs  job_runner.rs  jobs.rs  redraw.rs
crates/editor/src/syntax/: grammar.rs
crates/gui-client/: Cargo.toml
crates/gui-client/src/: client.rs  input.rs  lib.rs  signals.rs  ui.rs
crates/gui-client/src/client/: unix.rs
crates/gui-client/src/ui/: cell.rs  filetree.rs  floating.rs  grid.rs  prompt.rs  select.rs  settings.rs  statusbar.rs  style.rs  tab.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: capabilities.rs  client.rs  error.rs  jsonrpc.rs  lib.rs  operation.rs  position.rs  process.rs  request.rs  response.rs  util.rs
crates/lsp/src/client/: reader.rs  writer.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: codec.rs  key.rs  lib.rs  mouse.rs  option.rs  reader.rs  redraw.rs  writer.rs
crates/messages/src/redraw/: cell.rs  choice.rs  color.rs  completion.rs  cursor.rs  cursor_shape.rs  cursor_style.rs  filetree.rs  items.rs  line_numbers.rs  point.rs  popup.rs  prompt.rs  snapshots.rs  status.rs  status_message.rs  statusline.rs  style.rs  text_style.rs  theme.rs  window.rs
crates/parser/: Cargo.toml
crates/parser/benches/: large.json  large.toml  parse.rs
crates/parser/pegs/: calc.peg  json.peg  simple.peg  toml.peg
crates/parser/src/: byte_reader.rs  char_reader.rs  grammar.rs  input.rs  lib.rs  parser.rs  parsing_machine.rs  pika_parser.rs
crates/regex/benches/: regex.rs
crates/regex/src/: cursor.rs  lib.rs  regex.rs  vm.rs
crates/regex/tests/: regex.rs
crates/server/: Cargo.toml
crates/server/src/: events.rs  job_runner.rs  lib.rs  server.rs
crates/syntax/: Cargo.toml
crates/syntax-cli/: Cargo.toml
crates/syntax-cli/src/: main.rs
crates/syntax/benches/: parse.rs  perf.rs
crates/syntax/pegs/: glob.peg  json.peg  regex.peg  toml.peg
crates/syntax/src/: byte_reader.rs  error.rs  finder.rs  glob.rs  grammar.rs  lib.rs  loader.rs  parsing_machine.rs  regex.rs  source.rs  syntax.rs
crates/terminal-client/: Cargo.toml
crates/terminal-client/src/: client.rs  grid.rs  input.rs  lib.rs  message.rs  rectangle.rs  signals.rs  terminal.rs  ui.rs  window_manager.rs
crates/ucd/: Cargo.toml
crates/ucd/benches/: grapheme_break.rs
crates/ucd/src/: enums.rs  general_category.rs  grapheme_break.rs  lib.rs  properties.rs  sentence_break.rs  word_break.rs
crates/utils/: Cargo.toml
crates/utils/src/: appendlist.rs  bitset.rs  either.rs  idmap.rs  lib.rs  linkedarray.rs  lru.rs  ranges.rs  ring.rs  sorted_vec.rs
editor/: Cargo.toml
editor/src/: actions.rs  common.rs  draw.rs  editor.rs  events.rs  lib.rs  server.rs  view.rs
editor/src/actions/: editor.rs  jobs.rs  movement.rs  prompt.rs  text.rs  window.rs
editor/src/common/: char.rs  dirs.rs  eol.rs  file.rs  movement.rs
editor/src/draw/: prompt.rs  window.rs
editor/src/editor/: bindings.rs  buffer.rs  buffers.rs  jobs.rs  keymap.rs  options.rs  theme.rs  themes.rs  window.rs  windows.rs
editor/src/server/: accept.rs  client.rs  jobs.rs
messages/: Cargo.toml
messages/src/: client.rs  codec.rs  key.rs  lib.rs  mouse.rs  reader.rs  redraw.rs  writer.rs
messages/src/redraw/: cell.rs  color.rs  point.rs  prompt.rs  size.rs  statusline.rs  style.rs  text_style.rs  theme.rs  window.rs
(+342 files in other folders)
