[package]
name = "sanedit-buffer"
version = "0.1.0"
authors = ["Eemeli Lottonen <eemed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
smallvec = "0.1"
smartstring = "1"
unicode-segmentation = "1.9"

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.3.1"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "iterators"
harness = false
