[package]
name = "sanedit-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-terminal-client = { path = "../terminal-client" }
sanedit-editor = { path = "../editor" }

clap = { version = "^4", features = ["derive"] }
