[workspace]
resolver = "2"
members = [
    "buffer",
    "cli",
    "core",
    "editor",
    "lsp",
    "macros",
    "messages",
    "server",
    "syntax",
    "syntax-cli",
    "terminal-client",
    "ucd",
    "utils",
]

[workspace.package]
version = "0.3.9"
edition = "2021"

[workspace.dependencies]
anyhow        = "1.0"
argh          = "0.1.13"
bincode       = "1.3"
chrono        = "0.4"
criterion     = "0.5" # Benchmarking
crossbeam     = "0.8.4" # Can be replaced when crossbeam_channel::Select comes to std
crossterm     = "0.28.1"
dirs-2        = "3.0.1"
dynasm        = "3.2.0"
dynasmrt      = "3.2.0"
futures-core  = "0.3"
futures-util  = "0.3"
libc          = "0.2"
log           = "0.4"
lsp-types     = "0.97"
quote         = "1"
rayon         = "1.7"
rustc-hash    = "1.1" # Not sure this is needed
serde         = "1.0"
serde_json    = "1.0"
smol_str      = "0.3.2"
strum         = "0.26"
strum_macros  = "0.26"
syn           = "2"
thiserror     = "1.0"
tokio         = "1.40.0"
tokio-util    = "0.7.12"
toml_edit     = "0.22"
unicode-width = "0.1.13" # Rendering itself has problems
which         = "5.0.0" # Should be replaced with something simpler
xattr         = "1.5.1" # xattrs preservation

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.release]
opt-level = 3
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.perf]
inherits = "release"
strip = false
debug = true
