[workspace]
resolver = "2"
members = [
    "buffer",
    "cli",
    "core",
    "editor",
    "lsp",
    "macros",
    "messages",
    "server",
    "syntax",
    "syntax-cli",
    "terminal-client",
    "ucd",
    "utils",
]

[workspace.package]
version = "1.2.1"
edition = "2021"

[workspace.dependencies]
anyhow        = "1.0"
argh          = "0.1.13"
bincode       = "1.3" # version 2 available but does not support serialized_size calculation, could replace with something else also?
chrono        = "0.4"
criterion     = "0.7.0" # Benchmarking
crossbeam     = "0.8.4" # Can be replaced when crossbeam_channel::Select comes to std
crossterm     = "0.29.0"
dynasm        = "4.0.1" # JIT
dynasmrt      = "4.0.1" # JIT
futures-core  = "0.3"
futures-util  = "0.3"
libc          = "0.2"
log           = "0.4"
lsp-types     = "0.97"
quote         = "1"
rayon         = "1.7"
rustc-hash    = "2.1.1" # Faster hashmaps/sets
serde         = "1.0"
serde_json    = "1.0"
smol_str      = "0.3.2"
strum         = "0.27.2"
strum_macros  = "0.27.2"
syn           = "2"
thiserror     = "2.0"
tokio         = "1.40.0"
tokio-util    = "0.7.12"
toml_edit     = "0.23.6"
unicode-width = "0.2.1" # Rendering itself has problems
which         = "8.0.0" # Should be replaced with something simpler
xattr         = "1.5.1" # xattrs preservation
bstr          = "1.12.1"

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.release]
opt-level = 3
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.perf]
inherits = "release"
strip = false
debug = true
