[package]
name = "sanedit-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# General
lazy_static = "1.4.0"
log         = "0.4.14"
parking_lot = "0.12.0"

# Good helper macros for enums
strum        = "0.23"
strum_macros = "0.23"

# Error handling
anyhow      = "1.0"
thiserror   = "1.0"

# Used to store elements and generate an id for them
slotmap = "1.0"

# Lua api support
# mlua  = { version = "0.8", features = ["luajit", "vendored", "async", "macros"] }
tokio = { version = "1.20", features = ["full"] }
