[package]
name = "sanedit-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"     # To serialize messages
serde = { version = "1.0", features = ["derive"] }
bitflags    = "1.3" # for modifiers ctrl and alt
thiserror = "1.0"
