[package]
name = "sanedit-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-ucd = { path = "../ucd" }
sanedit-utils = { path = "../utils" }
memmap = "0.7"
lazy_static = "1.4"
aho-corasick = "1"
log = "0.4"

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.3.1"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "iterators"
harness = false
