[package]
name = "sanedit-buffer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-ucd = { path = "../ucd" }
sanedit-utils = { path = "../utils" }

aho-corasick.workspace = true
log.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
criterion.workspace = true

[[bench]]
name = "iterators"
harness = false
