[package]
name = "sanedit-buffer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-ucd = { path = "../ucd" }
sanedit-utils = { path = "../utils" }

log.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "search"
harness = false
