[package]
name = "sanedit-cli"
version.workspace = true
edition.workspace = true

[package.metadata.deb]
maintainer = "eemed <eemed@protonmail.com>"
copyright = "2024, eemed"
depends = "$auto"
section = "utils"
priority = "optional"

[[bin]]
name = "sane"
path = "src/main.rs"

[dependencies]
sanedit-terminal-client = { path = "../terminal-client" }
sanedit-editor = { path = "../editor" }
sanedit-server = { path = "../server" }

clap = { workspace = true, features = ["derive"] }
log.workspace = true
log4rs.workspace = true
