[package]
name = "sanedit-cli"
description = "text editor"
version.workspace = true
edition.workspace = true

[package.metadata.deb]
name = "sanedit"
maintainer = "eemed <eemed@protonmail.com>"
copyright = "2024, eemed"
depends = ""
section = "utils"
priority = "optional"
assets = [
    ["target/release/sane", "usr/bin/", "755"],
    ["../../runtime/**/*", "usr/share/sanedit/", "644"],
    ["../../additional/sanedit.svg", "usr/share/sanedit/", "644"],
    ["../../additional/sanedit.desktop", "usr/share/applications/", "644"],
]
license-file = ["../../LICENSE"]

[[bin]]
name = "sane"
path = "src/main.rs"

[dependencies]
sanedit-terminal-client = { path = "../terminal-client" }
sanedit-editor = { path = "../editor" }
sanedit-server = { path = "../server" }
sanedit-core = { path = "../core" }

argh.workspace = true
log.workspace = true
chrono = { workspace = true, features = ["alloc"]}
