[package]
name = "sanedit-core"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-buffer = { path = "../buffer" }
sanedit-utils = { path = "../utils" }
sanedit-syntax = { path = "../syntax" }

serde = { workspace = true, features = ["derive"] }

anyhow.workspace = true
globset.workspace = true
tokio.workspace = true
unicode-width.workspace = true
rustc-hash.workspace = true 
rayon.workspace = true
dirs.workspace = true
log.workspace = true
strum.workspace = true
strum_macros.workspace = true
