[package]
name = "sanedit-core"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-buffer = { path = "../buffer" }
sanedit-utils = { path = "../utils" }
sanedit-syntax = { path = "../syntax" }

serde = { workspace = true, features = ["derive"] }

anyhow.workspace = true
unicode-width.workspace = true
rustc-hash.workspace = true 
dirs-2.workspace = true
log.workspace = true
strum_macros.workspace = true
