[package]
name = "sanedit-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-messages = { path = "../messages" }
sanedit-buffer = { path = "../buffer" }
sanedit-macros = { path = "../macros" }
sanedit-utils = { path = "../utils" }
sanedit-parser = { path = "../parser" }

# General
log         = "0.4"
dirs        = "4.0.0"  # Used to get easy access to different directories, tmp, config etc.
rayon       = "1.7"
rustc-hash  = "1.1"
rand        = "0.8.5"

portable-pty = "0.8"

# Error handling
anyhow      = "1.0"
thiserror   = "1.0"

# Used to store elements and generate an id for them
slotmap = "1.0"

tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# For cells
smallvec = "0.1"
unicode-width = "0.1"
unicode-segmentation = "1.9"

# Used to detect clipboard commands, TODO probably replace with something more
# lightweight
which = "5.0.0"

toml = "0.8"

regex-cursor = { version = "0.1", features = ["perf-inline"] }
