[package]
name = "sanedit-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-messages = { path = "../messages" }
sanedit-buffer = { path = "../buffer" }
sanedit-macros = { path = "../macros" }
sanedit-utils = { path = "../utils" }
sanedit-parser = { path = "../parser" }
sanedit-lsp = { path = "../lsp" }

# General
log         = "0.4"
dirs        = "4.0.0"  # Used to get easy access to different directories, tmp, config etc.
rayon       = "1.7"
rustc-hash  = "1.1"
rand        = "0.8.5"

# Error handling
anyhow      = "1.0"
thiserror   = "1.0"

tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# For cells
smallvec = "0.1"
unicode-width = "0.1"
unicode-segmentation = "1.9"

# Used to detect clipboard commands, TODO probably replace with something more
# lightweight
which = "5.0.0"

toml = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }

regex-cursor = { version = "0.1", features = ["perf-inline"] }
grep = { version = "0.3" }
globset = { version = "0.4" }

# Configuration handling
config = { version = "0.14" }
toml_edit = { version = "0.22" }
documented = { version = "0.5.0" }
