[package]
name = "sanedit-editor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-messages = { path = "../messages" }
sanedit-buffer = { path = "../buffer" }
sanedit-macros = { path = "../macros" }
sanedit-utils = { path = "../utils" }
sanedit-syntax = { path = "../syntax" }
sanedit-lsp = { path = "../lsp" }
sanedit-core = { path = "../core" }
sanedit-server = { path = "../server" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive", "rc"] }
tokio-util = { workspace = true, features = ["codec"] }
config = { workspace = true, features = ["toml"] }

# General
log.workspace = true
dirs.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
chrono.workspace = true

# Useful enum derives
strum.workspace = true
strum_macros.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

unicode-width.workspace = true

# Used to detect clipboard commands, TODO probably replace with something more
# lightweight
which.workspace = true

# Configuration handling
toml_edit.workspace = true
