[package]
name = "sanedit-gui-client"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-messages = { path = "../messages" }
sanedit-utils = { path = "../utils" }

tokio = { workspace = true, features = ["full"] }
eframe = { workspace = true, features = ["wgpu"] }

anyhow.workspace = true
crossbeam.workspace = true
fontdb.workspace = true
libc.workspace = true
log.workspace = true
unicode-width.workspace = true

# cosmic-text = "0.18"
# glyphon = "0.10"
# wgpu = "28.0"
# pollster = "0.3"   # for blocking async device creation
