[package]
name = "sanedit-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-buffer = { path = "../buffer" }
sanedit-utils = { path = "../utils" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }

lsp-types.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
