[package]
name              = "sanedit-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-buffer = { path = "../buffer" }
sanedit-utils  = { path = "../utils" }
sanedit-core   = { path = "../core" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }

lsp-types.workspace  = true
thiserror.workspace  = true
serde_json.workspace = true
log.workspace        = true
strum_macros.workspace = true
