[package]
name = "sanedit-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-core = { path = "../core" }

serde = { workspace = true, features = ["derive"] }
tokio-util = { workspace = true, features = ["codec"] }

bytes.workspace = true
bincode.workspace = true
bitflags.workspace = true
thiserror.workspace = true
byteorder.workspace = true
log.workspace = true
rustc-hash.workspace = true
