[package]
name = "sanedit-messages"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-core = { path = "../core" }

serde = { workspace = true, features = ["derive"] }
tokio-util = { workspace = true, features = ["codec"] }
smol_str = { workspace = true, features = ["serde"] }

bincode.workspace = true
thiserror.workspace = true
log.workspace = true
rustc-hash.workspace = true
