[package]
name = "sanedit-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-utils = { path = "../utils" }
sanedit-buffer = { path = "../buffer" }

rustc-hash = "1.1"
ahash      = "0.8"
smallvec   = "1"

anyhow     = "1.0"
thiserror  = "1.0"
log        = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false
