[package]
name = "sanedit-server"
version.workspace = true
edition.workspace = true

[dependencies]
sanedit-messages = { path = "../messages" }

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
rustc-hash.workspace = true
log.workspace = true
rayon.workspace = true

