[package]
name = "sanedit-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-utils = { path = "../utils" }
sanedit-buffer = { path = "../buffer" }
sanedit-core = { path = "../core" }
sanedit-server = { path = "../server" }

rustc-hash.workspace = true
bitvec.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
libc.workspace = true # JIT

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parse"
harness = false
