[package]
name = "sanedit-syntax"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-utils = { path = "../utils" }
sanedit-buffer = { path = "../buffer" }

rustc-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
libc.workspace = true # JIT

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parse"
harness = false
