[package]
name = "sanedit-syntax"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-utils = { path = "../utils" }
sanedit-buffer = { path = "../buffer" }

rustc-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
libc.workspace = true
dynasm.workspace = true
dynasmrt.workspace = true
bstr = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion.workspace = true

[profile.bench]
debug = true

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "perf"
harness = false
