[package]
name = "sanedit-terminal-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-messages = { path = "../messages" }

# Drawing to the terminal
crossterm = "0.23"
bytes = "1.3"
anyhow = "1.0"
tokio = { version = "1.20", features = ["full"] }
log = "0.4"
