[package]
name = "sanedit-terminal-client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanedit-messages = { path = "../messages" }

tokio = { workspace = true, features = ["full"] }

# Drawing to the terminal
crossterm.workspace = true
unicode-width.workspace = true

anyhow.workspace = true
log.workspace = true
crossbeam.workspace = true
