[package]
name = "sanedit-ucd"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "grapheme_break"
harness = false
